--- a/css/present/styles.css
+++ b/css/present/styles.css
@@ -311,7 +311,7 @@ figure#coming-soon-figure .typewriter-class-2 {
   }
   .nav-button {
     font-size: 2rem;
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
   }
 
   #nav-buttons {
